Fix text alignment in stylename1.css

--- a/stylename1.css
+++ b/stylename1.css
@@ -33,7 +33,7 @@ color: #ecf0f1;
 padding: 15px 20px;
 height: 100%;
 display: flex;
-text-align: center;
+align-items: center;
 text-decoration: none;
 transition: background-colour 0.3s ease;
 }
